Fix line height for better readability in index_style.css

--- a/index_style.css
+++ b/index_style.css
@@ -81,3 +81,7 @@ a:visited {
   padding-left: 10px;
   color: white;
 }
+
+* {
+  line-height: 25px;
+}
